[workspace]
members = ["span"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["ZialeHub", "gpoblon"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/ZialeHub/span"
repository = "https://github.com/ZialeHub/span"
keywords = ["span", "date", "time", "datetime", "duration"]
