[workspace]
members = ["timeflow"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["ZialeHub", "gpoblon"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/ZialeHub/timeflow"
repository = "https://github.com/ZialeHub/timeflow"
keywords = ["span", "date", "time", "datetime", "duration"]
